mise en forme page 404 et mobile first

--- a/Projet-7-react-main/projetReact/src/main.scss
+++ b/Projet-7-react-main/projetReact/src/main.scss
@@ -1,4 +1,9 @@
 @use "./sass/app.scss";
 @use "./sass/header.scss";
-@use "./sass/banner.scss";
 @use "./sass/thumb.scss";
+@use "./sass/appartements.scss";
+@use "./sass/footer.scss";
+@use "./sass/slideshow.scss";
+@use "./sass/notFound.scss";
+@use "./sass/banner.scss";
+@use "./sass/bannerAbout.scss";
