--- a/Projet-7-react-main/projetReact/src/sass/banner.scss
+++ b/Projet-7-react-main/projetReact/src/sass/banner.scss
@@ -1,30 +1,48 @@
-.gallery {
-    display: flex;
-    flex-direction: row;
-}
+@use "../sass/variable_mixin/mixins.scss" as mixins;
 
 .banner {
-
-
-    width: 100%;
-    height: 150px;
+    height: 223px;
+    display: flex;
     position: relative;
-    margin-top: 20px;
+    margin: 50px 100px 43px 100px;
+    background: #000;
+    border-radius: 25px;
+    align-items: center;
+    justify-content: center;
+
+    @media (max-width: 550px) {
+        width: 335px;
+        height: 111px;
+    }
 
     img {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: 223px;
         border-radius: 25px;
+        object-fit: cover;
+        opacity: 0.6;
+
+        @media (max-width: 550px) {
+            width: 335px;
+            height: 111px;
+        }
     }
 
     h1 {
+        color: #fff;
+        @include mixins.montserrat-style(700);
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        font-size: 48px;
+        display: flex;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        font-size: 2rem;
+        margin: 0px 16px;
 
+        @media (max-width: 1024px) {
+            font-size: 35px;
+        }
+
+        @media (max-width: 768px) {
+            font-size: 24px;
+        }
     }
 }
