--- a/Projet-7-react-main/projetReact/src/sass/thumb.scss
+++ b/Projet-7-react-main/projetReact/src/sass/thumb.scss
@@ -1,37 +1,66 @@
+@use "../sass/variable_mixin/mixins.scss" as mixins;
+
+.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    @media (max-width: 550px) {
+        align-items: center;
+    }
+}
+
 .thumb-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-}
-
-.thumb {
-    width: calc(33.33% - 20px);
-    height: 340px;
-    cursor: pointer;
-    position: relative;
-}
-
-.thumb img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    background: #f6f6f6;
     border-radius: 25px;
-}
+    gap: 50px;
+    align-items: center;
+    justify-content: center;
+    margin: 0px 100px 50px 100px;
+    padding-top: 6px;
+    padding-bottom: 43px;
 
-.thumb h3 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    color: white;
-    font-size: 1.2rem;
-    background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 20%;
-    margin: 0;
-    border-radius: 0 0 25px 25px;
-}
+    @media (max-width: 755px) {
+        background-color: #fff;
+        margin: 0px;
+        padding-bottom: 27px;
+    }
 
-.thumb h3:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+    .thumb {
+        display: flex;
+        flex-direction: column;
+        width: 340px;
+        height: 340px;
+        position: relative;
+        border-radius: 10px;
+        justify-content: flex-end;
+        margin-top: 50px;
+
+        @media (max-width: 1024px) {
+            width: 335px;
+            height: 255px;
+        }
+
+        @media (max-width: 755px) {
+            margin-top: 0px;
+        }
+    }
+
+    img {
+        object-fit: cover;
+        border-radius: 25px;
+        width: 100%;
+        height: 340px;
+    }
+
+    h3 {
+        width: 300px;
+        color: #fff;
+        font-size: 18px;
+        position: absolute;
+        margin: 268px 20px 20px 20px;
+        @include mixins.montserrat-style(700);
+    }
 }
