projet réact terminé avec les modification en anglais

--- a/Projet-7-react-main/projetReact/src/main.scss
+++ b/Projet-7-react-main/projetReact/src/main.scss
@@ -1,10 +1,10 @@
 @use "./sass/app.scss";
 @use "./sass/header.scss";
-@use "./sass/thumb.scss";
-@use "./sass/appartements.scss";
+@use "./sass/card.scss";
+@use "./sass/apartments.scss";
 @use "./sass/footer.scss";
 @use "./sass/slideshow.scss";
 @use "./sass/notFound.scss";
 @use "./sass/banner.scss";
 @use "./sass/bannerAbout.scss";
-@use "./sass/dropdowns.scss";
+@use "./sass/collapse.scss";
