--- a/Projet-7-react-main/projetReact/src/sass/apartments.scss
+++ b/Projet-7-react-main/projetReact/src/sass/apartments.scss
@@ -11,7 +11,7 @@
     }
 }
 
-.appartement {
+.apartment {
     margin: 0px 100px;
 
     @media (max-width: 1024px) {
@@ -93,6 +93,7 @@ button {
         font-size: 10px;
         min-width: 84px;
     }
+
 }
 
 .secondInfos {
@@ -111,16 +112,93 @@ button {
     display: flex;
     margin: 24px 0px 21px 0px;
     align-items: center;
+    gap: 10px;
 
     @media (max-width: 1024px) {
         margin-bottom: 13px;
         gap: 10px;
         margin-top: 0px;
     }
+
+}
+
+.host p {
+    color: red;
+    margin: 0;
+    padding: 0;
+}
+
+.hostFirstName,
+.hostLastName {
+    display: block;
 }
 
 .hostPicture {
     border-radius: 50%;
     width: 64px;
     height: 64px;
+}
+
+.collapseContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 76px;
+
+    @media (max-width: 1024px) {
+        margin-bottom: -23px;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    @media (max-width: 768px) {
+        margin-bottom: 27px;
+    }
+}
+
+.collapse {
+    width: 582px;
+
+    @media (max-width: 1024px) {
+        width: 100%;
+    }
+}
+
+.collapseHeader {
+    border-radius: 10px;
+    display: flex;
+    padding: 10px 20px 10px 10px;
+    background: variables.$saumon;
+    justify-content: space-between;
+    align-items: center;
+    @include mixins.montserrat-style(700);
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+
+    @media (max-width: 425px) {
+        font-size: 13px;
+    }
+}
+
+.collapseHeader .arrow {
+    transition: transform 0.3s ease;
+}
+
+.collapseHeader .arrow.open {
+    transform: rotate(-180deg);
+}
+
+.collapseContent {
+    @include mixins.montserrat-style(400);
+    padding: 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+}
+
+.equipmentList {
+    padding: 0px;
+    list-style-type: none;
+    margin: 0px;
 }
