--- a/Projet-7-react-main/projetReact/src/sass/card.scss
+++ b/Projet-7-react-main/projetReact/src/sass/card.scss
@@ -10,7 +10,7 @@
     }
 }
 
-.thumb-container {
+.Card-container {
     display: flex;
     flex-wrap: wrap;
     background: #f6f6f6;
@@ -28,7 +28,7 @@
         padding-bottom: 27px;
     }
 
-    .thumb {
+    .Card {
         display: flex;
         flex-direction: column;
         width: 340px;
