--- a/Projet-7-react-main/projetReact/src/sass/apartments.scss
+++ b/Projet-7-react-main/projetReact/src/sass/apartments.scss
@@ -139,10 +139,11 @@ button {
     height: 64px;
 }
 
-.collapseContainer {
+.collapseContainer2 {
     display: flex;
     flex-direction: row;
     gap: 76px;
+    justify-content: center;
 
     @media (max-width: 1024px) {
         margin-bottom: -23px;
@@ -154,51 +155,58 @@ button {
     @media (max-width: 768px) {
         margin-bottom: 27px;
     }
-}
 
-.collapse {
-    width: 582px;
 
-    @media (max-width: 1024px) {
+
+    .collapseHeader {
+        border-radius: 10px;
+        display: flex;
+        padding: 10px 20px 10px 10px;
+        background: variables.$saumon;
+        justify-content: space-between;
+        align-items: center;
+        @include mixins.montserrat-style(700);
+        color: white;
+        font-size: 18px;
+        cursor: pointer;
+
+        @media (max-width: 425px) {
+            font-size: 13px;
+        }
+    }
+
+    .collapseHeader .arrow {
+        transition: transform 0.3s ease;
+    }
+
+    .collapseHeader .arrow.open {
+        transform: rotate(-180deg);
+    }
+
+    .collapseContent {
+        @include mixins.montserrat-style(400);
+        padding: 20px;
+        border: none;
+        border-radius: 4px;
+        background-color: #f9f9f9;
+        width: 100%;
+    }
+
+    .equipmentList {
+        padding: 0px;
+        list-style-type: none;
+        margin: 0px;
+    }
+
+    .container {
         width: 100%;
     }
 }
 
-.collapseHeader {
-    border-radius: 10px;
-    display: flex;
-    padding: 10px 20px 10px 10px;
-    background: variables.$saumon;
-    justify-content: space-between;
-    align-items: center;
-    @include mixins.montserrat-style(700);
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
+.apartment .collapseContainer2 .container .collapse {
+    width: 100%;
 
-    @media (max-width: 425px) {
-        font-size: 13px;
+    @media (max-width: 1024px) {
+        width: 100%;
     }
-}
-
-.collapseHeader .arrow {
-    transition: transform 0.3s ease;
-}
-
-.collapseHeader .arrow.open {
-    transform: rotate(-180deg);
-}
-
-.collapseContent {
-    @include mixins.montserrat-style(400);
-    padding: 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-}
-
-.equipmentList {
-    padding: 0px;
-    list-style-type: none;
-    margin: 0px;
 }
