--- a/Projet-7-react-main/projetReact/src/sass/collapse.scss
+++ b/Projet-7-react-main/projetReact/src/sass/collapse.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0px 190px;
 
     @media (max-width: 768px) {
         margin: 0px 20px;
@@ -19,13 +18,16 @@
     }
 
     .collapse {
-        width: 100%;
+        width: 75%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     .collapseHeader {
         border-radius: 10px;
         display: flex;
-        max-width: 1023px;
+        width: 100%;
         padding: 10px 20px 10px 15px;
         background: var(--Red, #ff6060);
         justify-content: space-between;
@@ -56,4 +58,5 @@
         display: flex;
         align-items: center;
     }
+
 }
